# RustGrapher

./: Cargo.toml  ELEMENT_RANGES.md  LICENSE  README.md  rust-toolchain.toml
benches/: physics_bench.rs
examples/: basic.rs  ecs.rs  headless.rs  wikipedia.rs
src/: app.rs  lib.rs  renderer.rs  wasm.rs  web.rs
src/desktop/: renderer.rs  simulator.rs
src/desktop/renderer/: shapes.rs
src/native/: renderer.rs  simulator.rs
src/native/renderer/: shapes.rs
src/renderer/: init_graph.rs  node_shader.wgsl  vertex_buffer.rs
src/simulator/systems/: position_compute.rs  position_update.rs
src/wasm/: components.rs  properties_ecs.rs  quadtree_ecs.rs  ressources.rs  simulator.rs  simulator_ecs.rs  system_data.rs  world_builder.rs
src/wasm/components/: edge.rs
src/wasm/simulator/: ressources.rs
src/wasm/simulator/ressources/: simulator_vars.rs
src/web/: app.rs  event_dispatcher.rs  graph_data.rs  renderer.rs  simulator.rs
src/web/renderer/: camera.rs  edge_shader.wgsl  elements.rs  events.rs  init_graph.rs  node_shader.wgsl  node_types.rs  radial_menu_shader.wgsl  shader.wgsl  vertex_buffer.rs
src/web/renderer/camera/: camera_buffer.rs  camera_controller.rs  camera_uniform.rs
src/web/renderer/elements/: characteristic.rs  element_type.rs  generic.rs  owl.rs  rdf.rs  rdfs.rs
src/web/simulator/: systems.rs
src/web/simulator/components/: edges.rs  nodes.rs
src/web/simulator/ressources/: event_channels.rs  events.rs  simulator_vars.rs
src/web/simulator/systems/: force_compute.rs  location_detect.rs  position_compute.rs  position_update.rs
