[package]
    authors=[
        "Alexander Neuhäuser <alexander.neuhaeuser@leafnova.net>",
        "TheRealMorgenfrue",
    ]
    description="Simulate and visualize a force directed graph"
    edition="2024"
    exclude=[
        ".github/*",
        ".vscode/*",
        "example_images/*",
        "examples/reference.json",
        "tools/*",
    ]
    keywords=["force-directed-graph", "graph", "graphics", "simulation"]
    license-file="LICENSE"
    name="grapher"
    readme="README.md"
    repository="https://github.com/WebVOWL/RustGrapher"
    version="0.3.2"

[lib]
    crate-type=["cdylib", "rlib"]

[dependencies]
    anyhow="1.0.0"
    glam="0.29.0"
    log="0.4.0"
    rayon="1.10.0"
    winit="0.30.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
    env_logger="0.11.0"
    glium="0.33.0"
    petgraph="0.6.5"
    pollster="0.3.0"
    rand="0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
    bytemuck={version="1.16.0", features=["derive"]}
    console_error_panic_hook="0.1.6"
    console_log="1.0.0"
    wasm-bindgen="0.2.100"
    wasm-bindgen-futures="0.4.50"

    [dependencies.web-sys]
        version="0.3.77"
        # https://docs.rs/web-sys/latest/web_sys/#modules
        features=["Document", "Element", "Window"]

    [dependencies.wgpu]
        default-features=false
        features=[
            "webgl",
            "static-dxc",
            "web",
            "std",
            "wgsl",
            "parking_lot",
            # webgpu # when API is stable
        ]
        version="26.0.1"

    [dependencies.specs]
        default-features=false
        features=["specs-derive", "parallel", "stdweb"]
        git="https://github.com/WebVOWL/specs"
        version="0.20.1"

[dev-dependencies]
    criterion={version="0.5.0", features=["html_reports"]}
    petgraph-gen="0.1.3"
    serde={version="1.0.0", features=["derive"]}
    serde_json="1.0.0"

[[example]]
    name="wikipedia"
    path="examples/wikipedia.rs"

[[bench]]
    harness=false
    name="physics_bench"

[lints.clippy]
    derivable_impls="allow"
    new_without_default="allow"


# Default profile for devs, fast to compile, okay enough to run
[profile.dev]
    debug=true
    debug-assertions=true
    incremental=true
    lto=false
    opt-level=1
    overflow-checks=true
    panic="unwind"

# This profile is used for production releases - compile time doesn't matter.
[profile.release]
    codegen-units=1
    debug=false
    debug-assertions=false
    incremental=false
    lto=true
    opt-level=3
    overflow-checks=false
    panic="abort"

# This profile is a production release with debug info.
# Used by developers to test and debug a production release
[profile.preview]
    debug=true
    inherits="release"

# Used for cargo bench
[profile.bench]
    incremental=true
    inherits="release"
